if applied, this commit add compose file for dev setup

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,7 +32,7 @@ server {
     # django static files
     location /dj_static/ {
       autoindex on;
-      alias /app/backend/staticfiles/;
+      alias /usr/share/nginx/backend/;
     }
 
     # django media files
@@ -48,4 +48,10 @@ server {
 
     # Set the log level to debug
     error_log /var/log/nginx/error.log debug;
+
+    error_page   500 502 503 504  /50x.html;
+
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
   }
