--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,12 +30,28 @@
         - "5423"
       restart: always
     
+    nginx:
+      container_name: nginx
+      image: exom-nginx:latest
+      build: ./nginx
+      ports:
+        - "80:80"
+      volumes:
+        - ./frontend/build:/usr/share/nginx/html
+        - ./backend/staticfiles:/usr/share/nginx/backend
+        - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      restart: always
+      depends_on:
+        - backend
+        - frontend
+    
     frontend:
       container_name: frontend
       image: ecom/frontend:latest
       build: 
         context: ./frontend
-        dockerfile: Dockerfile.dev
+        cache_from: 
+        - invalidation
       env_file:
         ./frontend/.env
       ports:
@@ -43,8 +59,7 @@
       volumes:
         - ./frontend/:/app/frontend/
       restart: always
-      depends_on: 
-       - backend
+      stdin_open: true
       
   volumes:
       postgres_data:
