--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@auth-kit/react-router": "^3.1.3",
@@ -16,20 +17,28 @@
     "@mui/material": "^5.15.16",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-router": "^6.23.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "simple-zustand-devtools": "^1.1.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.1.0",
+    "prettier": "^3.2.5",
     "vite": "^5.2.0"
   }
 }
