--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,15 @@
     "@mui/material": "^5.15.16",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
-    "simple-zustand-devtools": "^1.1.0",
     "sweetalert2": "^11.10.8",
-    "zustand": "^4.5.2"
+    "yup": "^1.4.0",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.2.5",
+    "simple-zustand-devtools": "^1.1.0",
     "vite": "^5.2.0"
   }
 }
