if applied, this commit makes the AppLayout

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,13 +2,15 @@
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
+        "@src/*": ["src/*"],
         "@components/*": ["src/components/*"],
         "@pages/*": ["src/pages/*"],
         "@services/*": ["src/services/*"],
         "@hooks/*": ["src/hooks/*"],
         "@assets/*": ["src/assets/*"],
         "@store/*": ["src/store/*"],
-        "@utils/*": ["src/utils/*"]
+        "@utils/*": ["src/utils/*"],
+        "@layouts/*": ["src/layouts/*"],
         
       }
     },
